samples/_failures_safe/1761268867_a2c2ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1920c6d6.c: In function ‘read_matrix’:
./samples/SAFE/__tmp_1920c6d6.c:138:13: error: expected identifier or ‘(’ at end of input
  138 |             double
      |             ^~~~~~
./samples/SAFE/__tmp_1920c6d6.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920c6d6.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1920c6d6.c:138:13: error: expected declaration or statement at end of input
